# SolvraScript

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  README.md  ROADMAP_PHASE2.md  ast.rs  core_bridge.rs  eslint.config.mjs  interpreter.rs  lib.rs  main.rs  modules.rs  package-lock.json  package.json  parser.rs  pnpm-lock.yaml  pnpm-workspace.yaml  pnpm-workspace.yaml.from-zip  stdlib_registry.rs  symbol.rs  tier1.rs  tier2.rs  tokenizer.rs
nova_ai/: Cargo.toml
nova_ai/src/: client.rs  lib.rs.from-zip
nova_cli/: .gitignore  Cargo.toml
nova_cli/src/: command.rs  completer.rs.from-zip  config.rs.from-zip  executor.rs  history.rs  lib.rs  main.rs  parser.rs  registry.rs.from-zip  terminal.rs
nova_cli/src/cmd/: app_store.rs  builtin.rs  builtin.rs.from-zip  external.rs  nova.rs
nova_cli/tests/: cli_smoke.rs
nova_core/: Cargo.toml  README.md  build.rs
nova_core/backend/: README.md  mod.rs
nova_core/backend/aarch64/: mod.rs
nova_core/benches/: fib.rs
nova_core/docs/: DESIGN_LOWERING.md  DESIGN_REGISTER_ALLOC.md  IR_SPEC.md  ROADMAP_ADVANCED.md  assembler_cli.md  backend_architecture.md.from-zip  backend_modularization_plan.md.from-zip  bytecode_enhancements.md  driver_framework.md  hal_overview.md  novac_format.md  nvc_format.md  runtime_cli.md
nova_core/examples/: embed_from_c.c  embed_runtime.rs
nova_core/ffi/: c_api.h  c_api.json
nova_core/runtime/: README.md  main.rs  mod.rs  repl.rs
nova_core/samples/: add_numbers.novac  hello_world.nvc  loop_counter.nvc  virtual_device_driver.novac
nova_core/src/: integration.rs  lib.rs  lib.rs.from-zip  module.rs
nova_core/src/backend/: ir.rs  lowering.rs  mod.rs  register_alloc.rs
nova_core/src/bytecode/: assembler.rs  assembler.rs.from-zip  ast.rs  ir.rs.from-zip  jit.rs  mod.rs  spec.rs  spec.rs.from-zip  vm.rs
nova_core/src/concurrency/: executor.rs  mod.rs.from-zip
nova_core/src/ffi/: mod.rs  mod.rs.from-zip
nova_core/src/memory/: arena.rs  contract.rs  gc.rs  mod.rs
nova_core/src/novac/: assembly.rs  format.rs  mod.rs
nova_core/src/sys/: fs.rs.from-zip  gpu.rs  hal.rs  mod.rs  mod.rs.from-zip  net.rs
nova_core/tests/: backends.rs.from-zip  drivers.rs  novac.rs  runtime.rs  runtime.rs.from-zip
nova_core/tests/nvc_samples/: arith_test.nvc  hal_integration_test.nvc  io_test.nvc  sensor_test.nvc  vector_test.nvc
nova_script/: Cargo.toml  Cargo.toml.from-zip  ast.rs  core_bridge.rs  interpreter.rs  interpreter.rs.from-zip  lib.rs  main.rs  main.rs.from-zip  modules.rs  parser.rs  parser.rs.from-zip  tokenizer.rs  tokenizer.rs.from-zip
nova_script/.github/workflows/: rust.yml
nova_script/docs/: builtin_status.md  language_reference.md  lsp_plan.md  modules.md  syntax_highlighting.md
nova_script/examples/: advanced_samples.ns  import_demo.ns
nova_script/platform/: README.md  mod.rs  sys_linux.rs  sys_macos.rs  sys_novaos.rs  sys_windows.rs
nova_script/scripts/: build_stdlib.sh
nova_script/stdlib/: io.ns  string.ns  vector.ns
nova_script/tests/: adv_test.ns  imports.rs  platform_test.rs  smoke.rs  test.ns
nova_script/tests/modules/: sample_module.ns
nova_shell_v0.1.0/: Cargo.toml  Makefile  README.md
nova_shell_v0.1.0/crates/compositor/: Cargo.toml
nova_shell_v0.1.0/crates/shell_launcher/: Cargo.toml
nova_shell_v0.1.0/docs/: ARCHITECTURE.md  CONFIG_GUIDE.md  IPC_PROTOCOL.md  ROADMAP.md  THEME_SPEC.md
nova_shell_v0.1.0/examples/: config.sample.toml
nova_shell_v0.1.0/extras/systemd/: nova-compositor.service  nova-shell-launcher.service  nova-shell-settings.service
nova_shell_v0.1.0/src/: lib.rs  main.rs
nova_shell_v0.1.0/tests/: bin_runs.rs
nova_shell_v0.1.0/themes/CyberGrid/: theme.toml
solvra_ai/: Cargo.toml
solvra_ai/src/: client.rs  lib.rs
solvra_app_store/: Cargo.toml
solvra_app_store/src/: app.rs  errors.rs  installation.rs  lib.rs  sandbox.rs  store.rs
solvra_app_store/src/apps/: mod.rs  solvrasheets.rs  solvraslides.rs  solvrastream.rs  solvrawriter.rs
solvra_core/: Cargo.toml  README.md  build.rs
solvra_core/backend/: README.md  mod.rs
solvra_core/backend/aarch64/: mod.rs
solvra_core/backend/arm/: mod.rs
solvra_core/backend/x86_64/: mod.rs
solvra_core/benches/: fib.rs
solvra_core/docs/: DESIGN_LOWERING.md  DESIGN_REGISTER_ALLOC.md  IR_SPEC.md  ROADMAP_ADVANCED.md  assembler_cli.md  backend_architecture.md  backend_modularization_plan.md  bytecode_enhancements.md  driver_framework.md  hal_overview.md  runtime_cli.md  svc_format.md
solvra_core/examples/: embed_from_c.c  embed_runtime.rs
solvra_core/ffi/: c_api.h  c_api.json
solvra_core/runtime/: README.md  main.rs  mod.rs  repl.rs
solvra_core/samples/: add_numbers.svc  hello_world.svc  loop_counter.svc  virtual_device_driver.svc
solvra_core/src/: integration.rs  lib.rs  module.rs
solvra_core/src/backend/: ir.rs  lowering.rs  mod.rs  register_alloc.rs
solvra_core/src/bytecode/: assembler.rs  ast.rs  ir.rs  jit.rs  mod.rs  spec.rs  vm.rs
solvra_core/src/concurrency/: channel.rs  executor.rs  mod.rs  scheduler.rs
solvra_core/src/ffi/: mod.rs
solvra_core/src/memory/: contract.rs  gc.rs  mod.rs
solvra_core/src/solvrac/: assembly.rs  format.rs  mod.rs
solvra_core/src/sys/: fs.rs  hal.rs  mod.rs  net.rs
solvra_core/src/vm/: bytecode.rs  compiler.rs  instruction.rs  loader.rs  mod.rs  stack_vm.rs
solvra_core/tests/: backends.rs  drivers.rs  runtime.rs  solvrac.rs
solvra_core/tests/svc_samples/: arith_test.svc  hal_integration_test.svc  io_test.svc  sensor_test.svc  vector_test.svc
solvra_gui/: Cargo.toml  Makefile  README.md
solvra_gui/crates/compositor/: Cargo.toml
solvra_gui/crates/plugin_host/: Cargo.toml
solvra_gui/crates/plugin_sdk/: Cargo.toml
solvra_gui/crates/shell_launcher/: Cargo.toml
solvra_gui/docs/: ARCHITECTURE.md  CONFIG_GUIDE.md  IPC_PROTOCOL.md  UI_DESIGN.md
solvra_gui/examples/: config.sample.toml
solvra_gui/themes/CyberGrid/: theme.toml
solvra_lite/: Cargo.toml  README.md
solvra_lite/.cargo/: config.toml
solvra_lite/scripts/: build-arm64.sh
solvra_lite/src/: main.rs
(+773 files in other folders)
