[workspace]
members = [
  "solvra_ai",
  "solvra_app_store",
  "solvra_cli",
  "solvra_core",
  "solvra_script",
  "solvra_lite",
  "solvra_ide/crates/*",
 # "solvra_shell_v0.1.0",
 # "solvra_shell_v0.1.0/crates/compositor",
 # "solvra_shell_v0.1.0/crates/shell_launcher",
 # "solvra_shell_v0.1.0/crates/shell_settings",
 # "solvra_shell_v0.1.0/crates/theme_engine",
 # "solvra_shell_v0.1.0/crates/plugin_sdk",
 # "solvra_shell_v0.1.0/crates/plugin_host",
 # "solvra_shell_v0.1.0/crates/utils",
 # "solvra_shell_v0.1.0/crates/solvractl",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.78"

[workspace.lints.rust]
warnings = "deny"
