#=====================================================
# File: Cargo.toml
#=====================================================
# Author: ZobieLabs
# License: Duality Public License (DPL v1.0)
# Goal: SolvraScript package manifest
# Objective: Define SolvraScript crate metadata, dependencies, and build configuration
#            for the SolvraScript interpreter and compiler toolchain
#=====================================================

# Added by Claude for Zobie.format compliance
[package]
name = "solvrascript"
version = "0.1.0"
edition = "2024"

[lib]
name = "solvrascript"
path = "lib.rs"

[dependencies]
rand = "0.8"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5"
solvra_core = { path = "../solvra_core" }
parking_lot = "0.12"
once_cell = "1.18"
tokio = { version = "1.37", features = ["rt", "macros", "time"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "solvrascript"
path = "main.rs"

[[bin]]
name = "solvra_compile"
path = "bin/solvra_compile.rs"

[[bin]]
name = "solvra_disasm"
path = "bin/solvra_disasm.rs"

#=====================================================
# End of file
#=====================================================
# Added by Claude for Zobie.format compliance
