[package]
name = "nova_ai"
version = "0.1.0"
edition = "2021"
description = "NovaAI shared interfaces and mocks"
authors = ["NovaOS Contributors"]
license = "MIT"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
