[package]
name = "nova_cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "nova_cli"
path = "src/lib.rs"

[features]
default = []
plugin = ["libloading"]

[dependencies]
anyhow = "1"
thiserror = "1"
rustyline = { version = "13", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
regex = "1"
libloading = { version = "0.8", optional = true }
parking_lot = "0.12"
which = "5"
walkdir = "2"
shell-words = "1"

[dependencies.novascript]
path = "../nova_script"
package = "novascript"

[dev-dependencies]
assert_cmd = "2"
expectrl = "0.8"
tempfile = "3"
serial_test = "2"
