[package]
name = "nova_core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []
jit = []
gpu = []
ffi = []
gc = []

[dependencies]
anyhow = "1"
argon2 = "0.5"
crossbeam-deque = "0.8"
crossbeam-queue = "0.3"
parking_lot = "0.12"
rand = "0.8"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[build-dependencies]
serde_json = "1"
