[package]
name = "novascript"
version = "0.1.0"
edition = "2024"

[lib]
name = "novascript"
path = "lib.rs"

[dependencies]
rand = "0.8"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5"
nova_core = { path = "../nova_core" }
parking_lot = "0.12"

[[bin]]
name = "novascript"
path = "main.rs"
