[package]
name = "nova_shell_v0_1_0"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
default-run = "nova_shell_v0_1_0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "nova_shell_v0_1_0"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 2
incremental = true

[features]
default = []
gui = ["winit", "anyhow"]

[dependencies]
anyhow = { version = "1", optional = true }
winit = { version = "0.30", optional = true }
