[package]
name = "solvra_ai"
version = "0.1.0"
edition = "2021"
description = "SolvraAI shared interfaces and mocks"
authors = ["SolvraOS Contributors"]
license = "MIT"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
