[package]
name = "solvra_core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["backend-x86_64"]
jit = []
gpu = []
ffi = []
gc = []
backend-x86_64 = []
backend-armv7 = []
backend-aarch64 = []

[dependencies]
anyhow = "1"
once_cell = "1"
argon2 = "0.5"
crossbeam-deque = "0.8"
crossbeam-queue = "0.3"
parking_lot = "0.12"
rand = "0.8"
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[build-dependencies]
serde_json = "1"
