[workspace]
members = [
    "crates/compositor",
    "crates/shell_launcher",
    "crates/shell_settings",
    "crates/theme_engine",
    "crates/plugin_sdk",
    "crates/plugin_host",
    "crates/utils",
    "crates/solvractl",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.78"

[workspace.lints.rust]
warnings = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 2
incremental = true
