[package]
name = "solvra_lite"
version = "0.1.0"
edition = "2021"
description = "SolvraLite — lightweight mobile/tablet shell for SolvraOS"
authors = ["SolvraOS Contributors"]
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
egui = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

solvra_core = { path = "../solvra_core" }
solvrascript = { path = "../solvra_script", package = "solvrascript" }
solvra_ai = { path = "../solvra_ai" }

[dev-dependencies]
serde_yaml = "0.9"
