[package]
name = "solvra_ide_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
ignore = "0.4"
solvra_fail_safe = { path = "../fail_safe" }
solvrascript = { path = "../../../solvra_script", package = "solvrascript" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "io-util", "time"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
