[package]
name = "solvra_fail_safe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = { version = "0.5", features = ["password-hash"] }
once_cell = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.8"
rand = { version = "0.8", features = ["std", "std_rng"] }
