[package]
name = "solvra_ide_frontend"
version = "0.1.0"
edition = "2021"
authors = ["SolvraOS Contributors"]
description = "SolvraIDE v2 frontend and runtime"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
directories = "5"
eframe = { version = "0.24", features = ["glow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }
tokio-stream = "0.1"
futures = "0.3"
once_cell = "1"
parking_lot = "0.12"
walkdir = "2"
git2 = { version = "0.18", default-features = false, features = ["https"] }
tower-lsp = "0.20"
syntect = { version = "5", features = ["parsing", "yaml-load"] }
thiserror = "1"
log = "0.4"

[dev-dependencies]
serde_json = "1"
