[package]
name = "solvra_compositor"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[features]
full = []
lite = []
tablet = []

[dependencies]
anyhow = "1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
notify = "6"
smithay = { version = "=0.7.0", default-features = false, features = [
    "backend_egl",
    "use_system_lib",
    "renderer_glow",
    "desktop",
    "wayland_frontend"
] }
thiserror = "1"
calloop = "0.14.0"

[dependencies.theme_engine]
path = "../theme_engine"

[dependencies.utils]
path = "../utils"
