[package]
name = "solvra_shell_settings"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iced = { version = "=0.13.1" }
theme_engine = { path = "../theme_engine" }
utils = { path = "../utils" }
